nats/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: nats
  labels:
    app: nats
spec:
  ports:
  - name: client
    port: 4222
    targetPort: 4222
  - name: monitor
    port: 8222
    targetPort: 8222
  selector:
    app: nats
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: nats-headless
  namespace: nats
spec:
  ports:
  - name: cluster
    port: 6222
  selector:
    app: nats
  clusterIP: None
