nats/11-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-lb
  namespace: nats
  labels:
    app: nats
spec:
  type: LoadBalancer
  selector:
    app: nats
  ports:
  - name: client
    port: 4222
    targetPort: 4222
    protocol: TCP
